# worker-agent

./: .gitignore  AGENTS.md  Artel implementation backlog v0.md  OSS_CODING_AGENTS_COMPARISON.md  README.md  bugs.md  install.sh  mkdocs.yml  product-report.md  pyproject.toml  pyrightconfig.json  report.html
.artel/: AGENTS.md
docs/: acp.md  cli.md  index.md  installation.md  run-modes.md  web.md
docs/rfc/: acp-first-architecture.md  acp-first-backlog.md  acp-first-discovery.md  acp-first-gap-matrix.md  acp-image-attachment-decision.md  artel-tui-refresh-backlog.md  artel-tui-refresh-inspired-by-toad.md  canonical-session-event-vocabulary.md  control-plane-capability-classification.md  true-multisession-tui-window-model.md
extensions/artel-ext-example/: pyproject.toml
extensions/artel-ext-example/src/artel_ext_example/: __init__.py
extensions/worker-ext-example/: pyproject.toml
extensions/worker-ext-example/src/worker_ext_example/: __init__.py
registry/: extensions.toml
src/worker/: __init__.py
tests/: conftest.py  test_acp_phase7.py  test_acp_protocol_integration.py  test_advanced_phase6.py  test_agent.py  test_agent_advanced.py  test_anthropic_provider.py  test_azure_openai_provider.py  test_bedrock_provider.py  test_builtin_capabilities.py  test_cli_smoke_matrix.py  test_config.py  test_customization_phase4.py  test_delegation_registry.py  test_delegation_server_api.py  test_delegation_service.py  test_delegation_tools.py  test_delegation_tui.py  test_docs_artel_naming.py  test_docs_integration.py  test_docs_runtime_parity_cli.py  test_docs_unit.py  test_ext_manifest.py  test_ext_registry.py  test_extension_runtime_phase6.py  test_extensions_admin.py  test_extensions_phase3.py  test_extratools_builtin.py  test_file_edit_tool_diff.py  test_git_surface.py  test_github_copilot_oauth.py  test_github_copilot_provider.py  test_google_provider.py  test_image_attachments.py  test_installation.py  test_integration.py  test_kimi_oauth.py  test_kimi_provider.py  test_lmstudio_provider.py  test_local_server_cleanup.py  (+63 more)
