[project]
name = "worker"
version = "0.1.0"
description = "Extensible Python coding agent with client-server architecture"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "worker-ai",
    "worker-core",
    "worker-server",
    "worker-tui",
]

[project.scripts]
worker = "worker_core.cli:main"

[tool.uv.workspace]
members = [
    "packages/worker-ai",
    "packages/worker-core",
    "packages/worker-server",
    "packages/worker-tui",
]

[tool.uv.sources]
worker-ai = { workspace = true }
worker-core = { workspace = true }
worker-server = { workspace = true }
worker-tui = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
