[project]
name = "artel"
version = "0.1.0"
description = "Extensible Python coding agent with client-server architecture"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{ name = "Artel contributors" }]
dependencies = [
    "artel-ai",
    "artel-core",
    "artel-server",
    "artel-tui",
    "artel-web",
]

[project.scripts]
artel = "artel_core.cli:main"

[tool.uv.workspace]
members = [
    "packages/artel-ai",
    "packages/artel-core",
    "packages/artel-server",
    "packages/artel-tui",
    "packages/artel-web",
]

[tool.uv.sources]
artel-ai = { workspace = true }
artel-core = { workspace = true }
artel-server = { workspace = true }
artel-tui = { workspace = true }
artel-web = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/artel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
