[project]
name = "artel-ext-example"
version = "0.1.0"
description = "Example Artel extension — demonstrates tools and hooks"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "artel-core",
]

[project.entry-points."artel.extensions"]
example = "artel_ext_example:ExampleExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artel_ext_example"]
