[project]
name = "worker-ext-example"
version = "0.1.0"
description = "Example Worker extension — demonstrates tools and hooks"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "worker-core",
]

[project.entry-points."worker.extensions"]
example = "worker_ext_example:ExampleExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ext_example"]
